<resources>
    <string name="app_name">Not Always Right Reader</string>
    <string name="default_text_size">20</string>
    <string name="unfilteredButtonText">Unfiltered</string>
    <string name="setEndDateButtonText">Set End Date</string>
    <string name="allButtonText">All</string>
    <string name="matchDatesButtonText">Match Dates</string>
    <string name="setStartDateButtonText">Set Start Date</string>
    <string name="bothButtonText">Both</string>
    <string name="app_name_part_one">"NOT "</string>
    <string name="app_name_part_two">ALWAYS RIGHT READER</string>
    <string name="settings">Settings</string>
    <string name="allAndUnfilteredButtonText">All and Unfiltered</string>
    <string name="rightButtonText">Right</string>
    <string name="workingButtonText">Working</string>
    <string name="romanticButtonText">Romantic</string>
    <string name="relatedButtonText">Related</string>
    <string name="learningButtonText">Learning</string>
    <string name="friendlyButtonText">Friendly</string>
    <string name="hopelessButtonText">Hopeless</string>
    <string name="healthyButtonText">Healthy</string>
    <string name="legalButtonText">Legal</string>
    <string name="backButtonText">Back</string>
    <string name="modePrompt">Choose a Mode</string>
    <string name="select_app_mode">Select App Mode</string>
    <string name="default_search_mode">Range of Dates</string>
    <string name="default_article_opening">In Browser</string>
    <string name="setDateButtonText">Set Date</string>
    <string name="addDateButtonText">Add Date</string>
    <string name="removeFirstDateButtonText">Remove Top Date</string>
    <string name="resetDatesButtonText">Reset Dates</string>
    <string name="article_open_mode">How to Open Articles</string>
    <string name="viewArticlesButtonText">View Articles</string>
    <string name="clearArticlesButtonText">Clear List</string>
    <string name="article_only_open_new">Only Open New Articles</string>
    <string name="PreferencesName">ca.pathak.ca.notalwaysrightreader.preferences</string>
    <string name="ReadArticlesName">ca.pathak.ca.notalwaysrightreader.readarticles</string>
    <string name="StoredArticlesName">ca.pathak.ca.notalwaysrightreader.storedarticles</string>
    <string name="clear_read_articles">Clear Read Articles</string>
    <string name="title_activity_settings_v2">Settings</string>
    <string name="article_only_open_new_off">All articles will be opened</string>
    <string name="article_only_open_new_on">Only unread articles will be opened</string>
    <string name="reset_read_articles_title">Reset Read Articles</string>
    <string name="reset_read_articles_description">Pressing here will make all articles as unread.</string>
    <string name="reset_read_articles_confirm_question">Are you sure?</string>
    <string name="reset_read_articles_confirm_comment">This action cannot be undone.</string>
</resources>
